<resources>
    <string name="app_name">Companion</string>

    <string name="title_home">Home</string>
    <string name="title_companion">Companion</string>
    <string name="title_spellbook">Spellbook</string>
    <string name="title_companions_overview">Companions</string>
    <string name="title_create_companion_1">Create a new companion</string>
    <string name="title_edit_companion">Edit Companion</string>
    <string name="title_create_companion_2">Create a new companion - Proficiencies</string>
    <string name="title_create_companion_3">Create a new companion - Background</string>
    <string name="title_companion_overview">Companions overview</string>

    <string name="resetButtonLabel">Reset</string>

    <string name="saving_throw_proficiencies">Saving throw proficiencies</string>
    <string name="skill_proficiencies">Skill proficiencies</string>

    <string name="attributeStrength">Strength</string>
    <string name="attributeDexterity">Dexterity</string>
    <string name="attributeConstitution">Constitution</string>
    <string name="attributeIntelligence">Intelligence</string>
    <string name="attributeWisdom">Wisdom</string>
    <string name="attributeCharisma">Charisma</string>

    <string name="skillsInsight">Insight</string>
    <string name="skillsAcrobatics">Acrobatics</string>
    <string name="skillsSleightOfHand">Sleight of hand</string>
    <string name="skillsStealth">Stealth</string>
    <string name="skillsAthletics">Athletics</string>
    <string name="skillsArcana">Arcana</string>
    <string name="skillsHistory">History</string>
    <string name="skillsInvestigation">Investigation</string>
    <string name="skillsNature">Nature</string>
    <string name="skillsReligion">Religion</string>
    <string name="skillsAnimalHandling">Animal handling</string>
    <string name="skillsMedicine">Medicine</string>
    <string name="skillsPerception">Perception</string>
    <string name="skillsSurvival">Survival</string>
    <string name="skillsDeception">Deception</string>
    <string name="skillsIntimidation">Intimidation</string>
    <string name="skillsPerformance">Performance</string>
    <string name="skillsPersuasion">Persuasion</string>
    <string name="background_label">Background</string>
    <string name="background_hint">Enter your character\'s background</string>
    <string name="alignment_label">Alignment</string>
    <string name="personality_traits_label">Personality traits</string>
    <string name="ideals_label">Ideals</string>
    <string name="bonds_label">Bonds</string>
    <string name="flaws_label">Flaws</string>
    <string name="enter_your_companion_s_personality_traits">Enter your companion\'s personality traits</string>
    <string name="enter_your_companion_s_ideals">Enter your companion\'s ideals</string>
    <string name="enter_your_companion_s_bonds">Enter your companion\'s bonds</string>
    <string name="enter_your_companion_s_flaws">Enter your companion\'s flaws</string>
    <string name="hitpoints">Hitpoints:</string>
    <string name="hitpoints_value">20/20</string>
    <string name="temporary_hitpoints">Temporary hitpoints:</string>
    <string name="armour_class">Armour class:</string>
    <string name="speed">Speed:</string>
    <string name="initiative">Initiative:</string>
    <string name="titleSpellFragment">Spell</string>
    <string name="saveAndContinue">Save and continue</string>
    <string name="characterNameHint">Enter character\'s name</string>
    <string name="brierAbilityNamePlaceholder">Acid Arrow</string>
    <string name="adventurerCardNamePlaceholder">Name</string>
    <string name="adventurerCardLevelPlaceholder">1</string>
    <string name="adventurerCardLevelLabel">Level:</string>
    <string name="adventurerCardClassLabel">Class:</string>
    <string name="adventurerCardClassPlaceholder">Class</string>
    <string name="adventurerNamePlaceholder">Tim</string>
    <string name="adventurerRaceAndProfessionPlaceholder">Human Fighter</string>
    <string name="adventurerSwitchLabel">Show modifiers</string>
    <string name="adventurerHitpointsPlaceholder">10/10</string>
    <string name="adventurerArmourClassPlaceholder">17</string>
    <string name="adventurerSkillsLabel">Skills</string>
    <string name="adventurerPersonalityLabel">Personality</string>
    <string name="adventurerBackgroundLabel">Background</string>
    <string name="adventurerPesonalityTraitsLabel">Personality traits</string>
    <string name="adventurerIdealsLabel">Ideals</string>
    <string name="adventurerFlawsLabel">Flaws</string>
    <string name="adventurerBondsLabel">Bonds</string>
    <string name="adventurerStatPlaceholder">Intelligence</string>
    <string name="adventurerStatModifierPlaceholder">+0</string>
    <string name="spellHigherLevelPlaceholder">When you cast this spell using a spell slot of 3rd level or higher, the damage (both initial and later) increases by 1d4 for each slot level above 2nd.</string>
    <string name="spellHigherLevelLabel">On higher level</string>
    <string name="spellDescriptionPlaceholder">A shimmering green arrow streaks toward a target within range and bursts in a spray of acid. Make a ranged spell attack against the target. On a hit, the target takes 4d4 acid damage immediately and 2d4 acid damage at the end of its next turn. On a miss, the arrow splashes the target with acid for half as much of the initial damage and no damage at the end of its next turn.</string>
    <string name="spellDescriptionLabel">Description</string>
    <string name="spellNamePlaceholder">Acid Arrow</string>
    <string name="spellDetailsLabel">Details</string>
    <string name="spellRangeLabel">Range</string>
    <string name="spellRangePlaceholder">90 feet</string>
    <string name="spellDurationLabel">Duration</string>
    <string name="spellDurationPlaceholder">Instantenous</string>
    <string name="spellConcentrationLabel">Concentration</string>
    <string name="spellLevelLabel">Level</string>
    <string name="spellLevelPlaceholder">2</string>
    <string name="spellConcentrationPlaceholder">No</string>
    <string name="spellCastingLabel">Casting</string>
    <string name="spellComponentsLabel">Components</string>
    <string name="spellCastingPlaceholder">1 action</string>
    <string name="spellComponentsPlaceholder">V,S,M</string>
</resources>
