<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/mainLayout"
        android:padding="10dp">

        <TextView
            android:id="@+id/spellName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spellNamePlaceholder"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <View
            android:id="@+id/divider1"
            style="@style/Divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spellName" />


        <TextView
            android:id="@+id/descriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spellDescriptionLabel"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider1" />


        <TextView
            android:id="@+id/descriptionContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spellDescriptionPlaceholder"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriptionLabel" />


        <TextView
            android:id="@+id/higherLevelLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spellHigherLevelLabel"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriptionContent" />


        <TextView
            android:id="@+id/higherLevelContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spellHigherLevelPlaceholder"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/higherLevelLabel" />


        <TextView
            android:id="@+id/detailsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spellDetailsLabel"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/higherLevelContent" />

        <TextView
            android:id="@+id/rangeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spellRangeLabel"
            android:textAlignment="textEnd"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailsLabel" />

        <TextView
            android:id="@+id/rangeContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/spellRangePlaceholder"
            app:layout_constraintStart_toEndOf="@+id/rangeLabel"
            app:layout_constraintTop_toBottomOf="@+id/detailsLabel" />

        <TextView
            android:id="@+id/durationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spellDurationLabel"
            android:textAlignment="textEnd"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rangeContent" />

        <TextView
            android:id="@+id/durationContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/spellDurationPlaceholder"
            app:layout_constraintStart_toEndOf="@+id/durationLabel"
            app:layout_constraintTop_toBottomOf="@+id/rangeContent" />

        <TextView
            android:id="@+id/concentrationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spellConcentrationLabel"
            android:textAlignment="textEnd"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/durationContent" />

        <TextView
            android:id="@+id/levelLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spellLevelLabel"
            android:textAlignment="textEnd"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/concentrationLabel" />

        <TextView
            android:id="@+id/levelContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/spellLevelPlaceholder"
            app:layout_constraintStart_toEndOf="@+id/levelLabel"
            app:layout_constraintTop_toBottomOf="@+id/concentrationLabel" />

        <TextView
            android:id="@+id/concentrationContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/spellConcentrationPlaceholder"
            app:layout_constraintStart_toEndOf="@+id/concentrationLabel"
            app:layout_constraintTop_toBottomOf="@+id/durationContent" />

        <TextView
            android:id="@+id/castingLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spellCastingLabel"
            android:textAlignment="textEnd"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/levelLabel" />

        <TextView
            android:id="@+id/componentsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spellComponentsLabel"
            android:textAlignment="textEnd"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/castingLabel" />

        <TextView
            android:id="@+id/castingContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/spellCastingPlaceholder"
            app:layout_constraintStart_toEndOf="@+id/castingLabel"
            app:layout_constraintTop_toBottomOf="@+id/levelContent" />

        <TextView
            android:id="@+id/componentsContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/spellComponentsPlaceholder"
            app:layout_constraintStart_toEndOf="@+id/componentsLabel"
            app:layout_constraintTop_toBottomOf="@id/castingContent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>